# BerkeleySockets

./: CMakeLists.txt  LICENSE  README.md  main.cpp  server.cpp  server.h
client/: ClientFactory.h  ClientProcessor.cpp  ClientProcessor.h  IClient.h  TCPCLient.cpp  TCPClient.h  UDPClient.cpp  UDPClient.h  main.cpp
server/: IServer.h  IServerProcessor.h  ServerFactory.h  ServerProcessor.cpp  ServerProcessor.h  TCPServer.cpp  TCPServer.h  UDPServer.cpp  UDPServer.h  main.cpp  server.h  serverprocessor.cpp  serverprocessor.h  serverprocessorexercise.cpp  serverprocessorexercise.h
shared/: ArgsParser.cpp  ArgsParser.h
